@@ -1,3 +1,13 @@
+2017-07-12  Timothy Hatcher  <timothy@hatcher.name>
+
+        Improve font matching with FontConfig and FreeType
+        https://bugs.webkit.org/show_bug.cgi?id=174374
+
+        Reviewed by Michael Catanzaro.
+
+        * platform/graphics/freetype/FontCacheFreeType.cpp:
+        (WebCore::FontCache::createFontPlatformData): Loop through all family name matches from FcFontMatch.
+
 2017-07-13  Miguel Gomez  <magomez@igalia.com>
 
         [GTK][WPE] border-radius with non visible border doesn't work on images that have their own RenderLayer
